# latexcv

./: .gitignore  CV.tex  README.md  environment.dev.yml  environment.yml  pyproject.toml  test_yalcv.tex  yalcv.cls
docs/: cv-spec.md  developer-validation-renderers-tests.md
examples/compact-one-page/data/: achievements.yaml  competencies.yaml  layout.yaml
examples/full-showcase/data/: education.yaml  layout.yaml
examples/sample-cv/data/: layout.yaml  profile.yaml
examples/skills-focused/data/: experience.yaml  layout.yaml
latexcv/: cli.py  compiler.py  document.py  filters.py  loader.py  render.py
latexcv/layout/: cv.tex.j2  macros.tex.j2
latexcv/layout/classes/: yalcv.cls
layout/: cv.tex.j2  macros.tex.j2
layout/classes/: yalcv.cls
private-repo-starter/: README.md
private-repo-starter/data/: achievements.yaml  competencies.yaml  education.yaml  experience.yaml  layout.yaml  profile.yaml
tests/: test_cli.py  test_render.py
wrappers/r/: render.R
